--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body class="page">
 <header class="header">
   <nav class="theme-menu header__theme-menu">
-    <a class="header-logo" href="#0">&lt;/html&gt;</a>
+    <a class="header-logo">&lt;/html&gt;</a>
     <h1 class="header_heading">закрывающий тег</h1>
     <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
     <ul class="theme-menu__list">
       <li class="theme-menu__item">
         <button type="button" data-theme="dark" class="theme-menu__button">
-          ТЕМНО
+          темно
         </button>
       </li>
       <li class="theme-menu__item">
@@ -34,12 +34,12 @@
           data-theme="auto"
           disabled
           class="theme-menu__button">
-          АВТО
+          авто
         </button>
       </li>
       <li class="theme-menu__item">
         <button type="button" data-theme="light" class="theme-menu__button">
-          СВЕТЛО
+          светло
         </button>
       </li>
     </ul>
@@ -53,7 +53,7 @@
         <div class="label-wrapper">
           <p class="label">&lt;preparation&gt;</p>
           <img
-            src="images/preparation.png"
+            src="images/preparatio.png"
             class="main_description-image preparation-img"
             alt="Машинка с костром"
             loading="lazy"
@@ -510,7 +510,6 @@
       <form method="dialog">
         <button class="dialog-button"
                 type="submit"
-                onclick="window['dialog-id'].close();"
         >
           <span class="button__text">OK</span>
         </button>
