--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Закрывающий тег</title>
-    <link rel="icon" href="./svg/favicon.svg/" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./svg/favicon.svg/">
+    <link rel="icon" href="./svg/favicon.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./svg/favicon.svg">
     <link rel="stylesheet" href="./fonts/fonts.css"/>
     <link rel="stylesheet" href="./styles/variables.css"/>
     <link rel="stylesheet" href="./styles/style.css"/>
@@ -65,7 +65,7 @@
             основами и настроиться на учёбу. И, возможно, подумать, как новые
             знания могут повлиять на ваше будущее.
           </p>
-          <p class="main_description-text">Пришло время начинать.</p>
+          <p class="main_description-text">Я понял, что я пришел к лучшему выбору сферы деятельности.</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
@@ -119,7 +119,7 @@
             Часто за этим ощущением скрываются более глубокие вопросы: с чего начать?
             а вдруг будет слишком сложно? что, если я не справлюсь?
           </p>
-          <p class="main_description-text">На первый взгляд все кажется лёгким, пока не начинаешь вникать в поток информации</p>
+          <p class="main_description-text">На первый взгляд все легко, пока не начинаешь вникать.</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
@@ -171,7 +171,7 @@
             могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот,
             могли вдохновиться успехами и поверить в себя.
           </p>
-          <p class="main_description-text">Нам нужно преодолевать трудности, из-за этого мы становимся сильнее.</p>
+          <p class="main_description-text">Нам нужно преодолевать трудности, так мы становимся сильнее.</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
@@ -224,7 +224,7 @@
             и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму
             и вместо того, чтобы сделать идеально, старались просто сделать.
           </p>
-          <p class="main_description-text">Я впервые стал уделять внимание мелочам! Я понял что такое перфекционизм.</p>
+          <p class="main_description-text">Я стал уделять внимание мелочам! Я понял что такое перфекционизм.</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
@@ -278,7 +278,7 @@
             если очередной макет просто так не поддавался. Осваивать что-то
             новое легче, когда рядом есть единомышленники, не правда ли?
           </p>
-          <p class="main_description-text">Поддержка - очень важный аспект, невозможно тянуть все на своих плечах, нужны соратники из пачки :).</p>
+          <p class="main_description-text">Поддержка - очень важный аспект, нужны соратники из пачки :).</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
@@ -330,7 +330,7 @@
             могло показаться, что решения просто иссякли. Значит, пришло время посмотреть
             на задачу под другим углом.
           </p>
-          <p class="main_description-text">Любая задача может быть сложной. Важно соблюдать режим сна и отдыха - с этим преодоление "барьеров" станет обыденностью</p>
+          <p class="main_description-text">Мне стало понятно, чтов этой сфере выход есть всегда</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
@@ -383,7 +383,7 @@
             и в теории получше разобраться, и жизнь не забыть пожить.
             В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.
           </p>
-          <p class="main_description-text">Концетрацию породила мотивация! Без структурированного подхода гораздо сложнее достигнуть своей цели.</p>
+          <p class="main_description-text">Без структурированного подхода сложно достигнуть своей цели!</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
@@ -438,7 +438,7 @@
             но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть
             результат.
           </p>
-          <p class="main_description-text">Здесь я настроен на большое, готов к переменам и стремлению совершенствоваться!.</p>
+          <p class="main_description-text">Я понял, что готов идти дальше и развиваться!</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
