--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть
             результат.
           </p>
-          <p class="main_description-text">Я понял, что готов идти дальше и развиваться!</p>
+          <p class="main_description-text">Я понял, что готов идти дальше и развиваться! Важно не останавливаться на своем пути!</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
