--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот,
             могли вдохновиться успехами и поверить в себя.
           </p>
-          <p class="main_description-text">Нам нужно преодолевать трудности, так мы становимся сильнее.</p>
+          <p class="main_description-text">Нам нужно преодолевать трудности.</p>
         </div>
         <div class="card__button">
           <button class="card__icon-button" type="button">
